--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -1,50 +1,109 @@
-.first-section{
-    background-image: url("../assets/MacBook Pro - 12.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-}
-
 *{
-    margin: 0;
     padding: 0;
-}
-
-.navbar-list span{
-    width: 40px;
-    height: 19px;
-    font-family: 'Gelion', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 19px;
-    letter-spacing: -0.02em;
-    color: #009CDE;
-}
-
-.navbar-list ul{
-    font-family: 'Gelion', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color: rgba(11, 3, 3, 0.95);
-    letter-spacing: -0.02em;
-}
-
-.navbar-list a:link{
+    margin: 0;
     text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
 }
 
-.navbar-list ul{
-    list-style-type: none;
+body{
+    font-family: 'montserrat', sans-serif;
 }
 
-.navbar-list a:active{
-    text-decoration: none;
-    color: black;
+nav{
+    background: #0082e6;
+    height: 80px;
+    width: 100%;
 }
 
-.second-section{
-    background: url("../assets/logo.png");
+label.logo{
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
 }
+
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+
+nav ul li a {
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    text-transform: uppercase;
+}
+
+a.active, a:hover{
+    background: #1b9bff;
+    transition: .5s;
+}
+
+
+/*.first-section{*/
+/*    background-image: url("../assets/MacBook Pro - 12.png");*/
+/*    background-size: cover;*/
+/*    background-repeat: no-repeat;*/
+/*    height: 100vh;*/
+/*    position: center;*/
+/*}*/
+
+/**{*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*}*/
+
+/*.navbar-list{*/
+/*    gap: 90%;*/
+/*}*/
+
+/*.navbar-list span{*/
+/*    width: 40px;*/
+/*    height: 19px;*/
+/*    font-family: 'Gelion', sans-serif;*/
+/*    font-style: normal;*/
+/*    font-weight: 600;*/
+/*    font-size: 16px;*/
+/*    line-height: 19px;*/
+/*    letter-spacing: -0.02em;*/
+/*    color: #009CDE;*/
+/*}*/
+
+/*.navbar-list ul{*/
+/*    font-family: 'Gelion', sans-serif;*/
+/*    font-style: normal;*/
+/*    font-weight: 400;*/
+/*    font-size: 16px;*/
+/*    line-height: 19px;*/
+/*    color: rgba(11, 3, 3, 0.95);*/
+/*    letter-spacing: -0.02em;*/
+/*    !*list-style-type: none;*!*/
+/*    display: inline-flex;*/
+/*    text-align: center;*/
+/*    list-style: inside;*/
+/*}*/
+
+/*.navbar-list li a{*/
+/*    text-align: center;*/
+/*}*/
+
+/*.navbar-list a:link{*/
+/*    text-decoration: none;*/
+/*}*/
+
+/*.navbar-list a:active{*/
+/*    text-decoration: none;*/
+/*    color: black;*/
+/*}*/
+
+/*.second-section{*/
+/*    background: url("../assets/logo.png");*/
+/*}*/
