--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -42,120 +42,67 @@ nav ul li a {
     text-transform: uppercase;
 }
 
-a.active, a:hover{
+a.active,a:hover{
     background: #1b9bff;
     transition: .5s;
 }
 
-.checkbtn{
-    font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-}
-
-#check{
-    display: none;
-}
-
-@media (max-width: 952px) {
-    label.logo{
-        font-size: 30px;
-        padding-left: 50px;
-    }
-
-    nav ul li a{
-        font-size: 16px;
-    }
-}
-
-@media (max-width: 858px){
-    .checkbtn{
-        display: block;
-    }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #2c3e50;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    }
-
-    nav ul li{
-        display: block;
-    }
-    nav ul li a {
-        font-size: 20px;
-    }
-    a:hover, a.active{
-        background: none;
-        color: #0082e6;
-    }
-}
-
-
-/*.first-section{*/
-/*    background-image: url("../assets/MacBook Pro - 12.png");*/
-/*    background-size: cover;*/
-/*    background-repeat: no-repeat;*/
-/*    height: 100vh;*/
-/*    position: center;*/
+/*.checkbtn{*/
+/*    font-size: 30px;*/
+/*    color: white;*/
+/*    float: right;*/
+/*    line-height: 80px;*/
+/*    margin-right: 40px;*/
+/*    cursor: pointer;*/
+/*    display: none;*/
 /*}*/
 
-/**{*/
-/*    margin: 0;*/
-/*    padding: 0;*/
+/*#check{*/
+/*    display: none;*/
 /*}*/
 
-/*.navbar-list{*/
-/*    gap: 90%;*/
+/*@media (max-width: 952px) {*/
+/*    label.logo{*/
+/*        font-size: 30px;*/
+/*        padding-left: 50px;*/
+/*    }*/
+
+/*    nav ul li a{*/
+/*        font-size: 16px;*/
+/*    }*/
 /*}*/
 
-/*.navbar-list span{*/
-/*    width: 40px;*/
-/*    height: 19px;*/
-/*    font-family: 'Gelion', sans-serif;*/
-/*    font-style: normal;*/
-/*    font-weight: 600;*/
-/*    font-size: 16px;*/
-/*    line-height: 19px;*/
-/*    letter-spacing: -0.02em;*/
-/*    color: #009CDE;*/
-/*}*/
+/*@media (max-width: 858px){*/
+/*    .checkbtn{*/
+/*        display: block;*/
+/*    }*/
+/*    ul{*/
+/*        position: fixed;*/
+/*        width: 100%;*/
+/*        height: 100vh;*/
+/*        background: #2c3e50;*/
+/*        top: 80px;*/
+/*        left: -100%;*/
+/*        text-align: center;*/
+/*        transition: all .5s;*/
+/*    }*/
 
-/*.navbar-list ul{*/
-/*    font-family: 'Gelion', sans-serif;*/
-/*    font-style: normal;*/
-/*    font-weight: 400;*/
-/*    font-size: 16px;*/
-/*    line-height: 19px;*/
-/*    color: rgba(11, 3, 3, 0.95);*/
-/*    letter-spacing: -0.02em;*/
-/*    !*list-style-type: none;*!*/
-/*    display: inline-flex;*/
-/*    text-align: center;*/
-/*    list-style: inside;*/
-/*}*/
+/*    nav ul li{*/
+/*        display: block;*/
+/*        margin: 50px 0;*/
+/*        line-height: 30px;*/
+/*    }*/
 
-/*.navbar-list li a{*/
-/*    text-align: center;*/
-/*}*/
+/*    nav ul li a{*/
+/*        font-size: 20px;*/
+/*    }*/
 
-/*.navbar-list a:link{*/
-/*    text-decoration: none;*/
-/*}*/
+/*    a:hover, a.active{*/
+/*        background: none;*/
+/*        color: #0082e6;*/
+/*    }*/
 
-/*.navbar-list a:active{*/
-/*    text-decoration: none;*/
-/*    color: black;*/
-/*}*/
-
-/*.second-section{*/
-/*    background: url("../assets/logo.png");*/
+/*    #check:checked ~ ul{*/
+/*        left: 0;*/
+/*    }*/
 /*}*/
