--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -39,6 +39,7 @@ nav ul li a {
     color: white;
     font-size: 17px;
     padding: 7px 13px;
+    border-radius: 3px;
     text-transform: uppercase;
 }
 
@@ -47,62 +48,68 @@ a.active,a:hover{
     transition: .5s;
 }
 
-/*.checkbtn{*/
-/*    font-size: 30px;*/
-/*    color: white;*/
-/*    float: right;*/
-/*    line-height: 80px;*/
-/*    margin-right: 40px;*/
-/*    cursor: pointer;*/
-/*    display: none;*/
-/*}*/
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
 
-/*#check{*/
-/*    display: none;*/
-/*}*/
+#check{
+    display: none;
+}
 
-/*@media (max-width: 952px) {*/
-/*    label.logo{*/
-/*        font-size: 30px;*/
-/*        padding-left: 50px;*/
-/*    }*/
+@media (max-width: 952px) {
+    label.logo{
+        font-size: 30px;
+        padding-left: 50px;
+    }
 
-/*    nav ul li a{*/
-/*        font-size: 16px;*/
-/*    }*/
-/*}*/
+    nav ul li a{
+        font-size: 16px;
+    }
+}
 
-/*@media (max-width: 858px){*/
-/*    .checkbtn{*/
-/*        display: block;*/
-/*    }*/
-/*    ul{*/
-/*        position: fixed;*/
-/*        width: 100%;*/
-/*        height: 100vh;*/
-/*        background: #2c3e50;*/
-/*        top: 80px;*/
-/*        left: -100%;*/
-/*        text-align: center;*/
-/*        transition: all .5s;*/
-/*    }*/
+@media (max-width: 858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
 
-/*    nav ul li{*/
-/*        display: block;*/
-/*        margin: 50px 0;*/
-/*        line-height: 30px;*/
-/*    }*/
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
 
-/*    nav ul li a{*/
-/*        font-size: 20px;*/
-/*    }*/
+    nav ul li a{
+        font-size: 20px;
+    }
 
-/*    a:hover, a.active{*/
-/*        background: none;*/
-/*        color: #0082e6;*/
-/*    }*/
+    a:hover, a.active{
+        background: none;
+        color: #0082e6;
+    }
 
-/*    #check:checked ~ ul{*/
-/*        left: 0;*/
-/*    }*/
-/*}*/
+    #check:checked ~ ul{
+        left: 0;
+    }
+}
+
+section{
+    background: url("../assets/MacBook Pro - 12.png") no-repeat;
+    background-size: cover;
+    height: calc(100vh - 80px);
+}
